--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="256x256" href="%PUBLIC_URL%/icons/favicon-256x256.png">
+    <meta name="theme-color" content="#1976d2">
     <title>Catalogo lml</title>
   </head>
   <body>
